--- a/www/master.css
+++ b/www/master.css
@@ -3,6 +3,18 @@ body, img {
 	padding:0;
 	border:	0;
 }
+.title {
+    background: black;
+    color: red;
+	font-size:12px;
+	font-weight:bold;
+	text-align:center;
+    width: 100%;
+    position: absolute;
+    left:0px;
+    bottom:0px;
+    z-index: 6;
+}
 .map {
 	width:	100%;
 	height:	100%;
